# JerezBudgetAPI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  resources.json
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_national_layer.py  0003_performance_indexes.py  0004_socioeconomic_tables.py  0005_s11_geo_superficie.py  0006_etl_validation_exceptions.py  0007_entities_periodo.py  0008_kpi_thresholds_cesel.py
api/: admin.py  health.py  webhooks.py
api/olap/: cube_model.py  fdp_generator.py  query_engine.py  router.py
app/: config.py  db.py  main.py
dashboard/: app.py  components.py  config.py
dashboard/pages/: comparison.py  explorer.py  rigor.py
data/: peers.csv  revenue_concepts.csv
docs/: gestion_financiera.md  odm_integration.md
etl/: downloader.py  loader.py  scraper.py
etl/conprel/: __init__.py  (+4 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
gql/: schema.py  types.py
graphql/: schema.py  types.py
models/: __init__.py  budget.py  national.py  socioeconomic.py
scripts/: init_db.sql  load_historical.sh  load_historical_conprel.sh  seed_municipalities.py
services/: cg_ayto_scraper.py  cuentas_scraper.py  metrics.py  odmgr_sync.py  osm.py  peer_groups.py  reconciliation.py
tasks/: celery_app.py  cg_ayto_tasks.py  cgkpi_upsert.py  conprel_tasks.py  cuenta_general_tasks.py  etl_tasks.py  seed_economic_names.py  seed_entities.py
tests/: test_conprel_parser.py  test_graphql.py  test_metrics.py  test_national_models.py  test_olap_engine.py  test_xlsx_parser.py
(+59 files in other folders)
